# validator

./: .editorconfig  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  buildall.sh  data_sync_records.ipynb  docker-compose.test.yml  docker-compose.yml  ecosystem.config.js  entrypoint.sh  example.env
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflow/: rust.yaml
.github/workflows/: ci.yml
.history/: .env_20220109155403  .env_20220109172121  .env_20220109172332  .env_20220109172440  .env_20220109172513  .env_20220109172516  .env_20220109172616  .env_20220109173037  .env_20220109173040  .env_20220118163306  .env_20220118163312  .env_20220118163314  .env_20220118163317  .env_20220118164013  .env_20220118164028  .env_20220120123413  .env_20220120123417  .env_20220120123458  .env_20220120155443  .env_20220120155458  .env_20220120155500  .env_20220120155501  .env_20220120155502  .env_20220122173523  .env_20220122173524  .env_20220122173526  .env_20220122173530  .env_20220122173531  .env_20220122173536  .env_20220122173538  Cargo_20220109155403.toml  Cargo_20220109155418.toml  Cargo_20220109170920.toml  Cargo_20220109170945.toml  Cargo_20220109171048.toml  Cargo_20220115191548.toml  Cargo_20220115191610.toml  Cargo_20220115192312.toml  Cargo_20220115192429.toml  Cargo_20220115192441.toml  (+48 more)
.history/migrations/00000000000000_diesel_initial_setup/: down_20220109155403.sql  down_20220115205757.sql  down_20220120123535.sql  up_20220115205802.sql  up_20220115210857.sql  up_20220115210901.sql  up_20220115210903.sql  up_20220115210905.sql  up_20220115210906.sql  up_20220115211024.sql  up_20220115211027.sql  up_20220115211100.sql  up_20220115211118.sql  up_20220115211147.sql  up_20220115211155.sql  up_20220117155530.sql  up_20220120122542.sql  up_20220120122613.sql  up_20220120124434.sql  up_20220120124438.sql  up_20220120124439.sql  up_20220120124441.sql  up_20220120124445.sql  up_20220120125233.sql
.history/nginx/: nginx_20220109173201.conf
.history/src/: const_20220120110915.rs  consts_20220120110950.rs  consts_20220120111030.rs  consts_20220120111049.rs  consts_20220123132435.rs  consts_20220123132440.rs  consts_20220123132445.rs  consts_20220123132447.rs  consts_20220123132458.rs  consts_20220123132500.rs  consts_20220123132502.rs  consts_20220123132510.rs  consts_20220123132512.rs  consts_20220123132514.rs  consts_20220123132611.rs  consts_20220123132617.rs  consts_20220123132620.rs  consts_20220123132638.rs  consts_20220123132642.rs  consts_20220123132703.rs  consts_20220123132711.rs  consts_20220123132714.rs  consts_20220123132719.rs  consts_20220123132722.rs  consts_20220123132734.rs  consts_20220123132743.rs  consts_20220123132749.rs  consts_20220123132753.rs  consts_20220123132802.rs  consts_20220123132809.rs  consts_20220123132812.rs  consts_20220123132822.rs  consts_20220123132823.rs  consts_20220123132828.rs  consts_20220123132832.rs  consts_20220123132835.rs  consts_20220123132847.rs  consts_20220123132853.rs  consts_20220123132857.rs  consts_20220123132901.rs  (+174 more)
.history/src/cron/: contract_20220109172131.rs  error_20220109155403.rs  error_20220109162415.rs  mod_20220109160359.rs  mod_20220109160400.rs  mod_20220109160434.rs  mod_20220109160436.rs  mod_20220109160441.rs  mod_20220109160445.rs  mod_20220109160447.rs  mod_20220109160449.rs  mod_20220109160452.rs  mod_20220109160459.rs  mod_20220109160509.rs  mod_20220109160524.rs  mod_20220109160531.rs  mod_20220109160545.rs  mod_20220109160548.rs  mod_20220109160557.rs  mod_20220109160600.rs  mod_20220109160603.rs  mod_20220109160613.rs  mod_20220109160628.rs  mod_20220109160641.rs  mod_20220109160744.rs  mod_20220109160745.rs  mod_20220109160757.rs  mod_20220109160803.rs  mod_20220109160814.rs  mod_20220109160815.rs  mod_20220109160819.rs  mod_20220109160827.rs  mod_20220109160830.rs  mod_20220109160839.rs  mod_20220109160845.rs  mod_20220109160846.rs  mod_20220109160911.rs  mod_20220109160913.rs  mod_20220109160914.rs  mod_20220109160929.rs  (+178 more)
.history/src/database/: mod_20220117220026.rs  mod_20220117233650.rs  mod_20220117233655.rs  mod_20220117233659.rs  models_20220115194016.rs  models_20220115194019.rs  models_20220115210318.rs  models_20220115210320.rs  models_20220115210323.rs  models_20220115210325.rs  models_20220117220746.rs  models_20220117220747.rs  models_20220117224252.rs  models_20220117233642.rs  models_20220117233643.rs  models_20220117233644.rs  models_20220120102930.rs  models_20220120105245.rs  models_20220120105719.rs  models_20220120105725.rs  models_20220120105814.rs  models_20220120105840.rs  models_20220120124212.rs  models_20220120124216.rs  schema_20220117220019.rs  schema_20220117220105.rs  schema_20220119194810.rs  schema_20220119194815.rs  schema_20220120123921.rs  schema_20220120123927.rs  schema_20220120125007.rs  schema_20220120125107.rs
.history/src/server/: mod_20220109155403.rs  mod_20220109170940.rs  mod_20220109172211.rs  mod_20220109172214.rs  mod_20220109172219.rs  mod_20220109172220.rs  (+297 more)
bundles/: test_bundle
docs/: README.mdx
graphql/: query.graphql  schema.graphql  transactions.query.graphql  transactions.schema.graphql
migrations/00000000000000_diesel_initial_setup/: up.sql
src/: arweave.rs  bundler.rs  consts.rs  context.rs  contract_gateway.rs  dynamic_async_queue.rs  dynamic_source.rs  hardware.rs  key_manager.rs  lib.rs  main.rs  message_builder.rs  pool.rs  retry.rs  state.rs  types.rs  utils.rs  wallet_tool.rs
src/bundlr/: bundle.rs  bundler.rs  mod.rs  signer.rs  tags.rs
src/cron/: arweave.rs  bundle.rs  clear_transactions.rs  contract.rs  error.rs  leader.rs  mod.rs  slasher.rs  state.rs  transactions.rs  validate.rs
src/database/: mod.rs  models.rs  queries.rs  schema.rs
src/http/: mod.rs  reqwest.rs
src/server/: mod.rs
src/state/: mod.rs
test-data/: RpwDyKqv1Z9J2H8ky2bwyGteIio3Mhqbhb0eYCJMHkc.json  block_NoD90XIXNVUvFVUW66EvJyjYelwrw7QM94HQ5MnvVwOODxgVtGqfwZgYBcw7Okv6.json  block_Tn5fr-RL1L5PfXeWTrH7umebRx8RCChbSrBdB-Q5E3vJt8jgP6UnayltOyv2Zo-w.json  block_nbu76VJa4p-Y7HXp8OKALSQpHinRne-LJVPH9rpUHjxKCKi3y5XJisUlAtE3IBET.json
(+1029 files in other folders)
