[package]
name = "validator"
version = "0.1.0"
edition = "2021"
default-run = "validator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.0"
anyhow = "1.0"
async-stream = "0.3.2"
avro-rs = "0.13.0"
awc = "3.0"
base64 = "0.13.0"
bundlr-contracts-validators = { git = "https:github.com/Bundlr-Network/contracts-rust.git", branch = "master" }
bundlr-sdk = { git = "https://github.com/Bundlr-Network/rust-sdk.git", branch = "master" }
bytes = "1.1.0"
clap = { version = "3.1.2", features = ["derive", "env"] }
data-encoding = { version = "2.3.2", features = [ "alloc" ] }
derive_more = "0.99.17"
diesel = { version = "1.4.8", features = [ "sqlite", "r2d2", "numeric" ] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.19"
futures-util = "0.3"
http = { version = "0.2.6", optional = true }
indexmap = { version = "1.6.2", features = ["serde-1"] }
jsonwebkey = "0.3.4"
lazy_static = "1.4.0"
num-traits = "0.2.14"
once_cell = "1.9.0"
openssl = "0.10.40"
paris = { version = "1.5.8", features = ["timestamps", "macros"] }
reqwest = { version = "0.11.9", features = ["blocking", "json", "stream"], optional = true }
serde = "1.0.132"
serde_json = "1.0.73"
thiserror = "1.0"
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1.29"
url = { version = "0.2.2", optional = true }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

# Uncomment to build against local copy of contracts
#[patch."https:github.com/Bundlr-Network/contracts-rust.git"]
#bundlr-contracts-validators = { path = "../contracts-rust/validators"}

[features]
default = ["reqwest-client"]
reqwest-client = ["reqwest", "http", "url"]
test-routes = []

[[bin]]
name = "validator"
path = "src/bin/validator.rs"

[[bin]]
name = "wallet-tool"
path = "src/bin/wallet_tool.rs"

[[bin]]
name = "message-builder"
path = "src/bin/message_builder.rs"
