[package]
name = "validator"
version = "0.1.0"
edition = "2021"
default-run = "validator"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.0"
anyhow = "1.0"
async-stream = "0.3.2"
async-trait = "0.1.56"
base64 = "0.13.0"
bundlr-contracts-validators = { git = "https:github.com/Bundlr-Network/contracts-rust.git", branch = "master", default-features = false }
bundlr-sdk = { git = "https://github.com/Bundlr-Network/rust-sdk.git", branch = "master" }
bytes = "1.1.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.1.2", features = ["derive", "env"] }
data-encoding = { version = "2.3.2", features = [ "alloc" ] }
derive_more = "0.99.17"
diesel = { version = "1.4.8", features = [ "postgres", "r2d2", "numeric" ] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.19"
futures-util = "0.3"
http = { version = "0.2.6", optional = true }
httpdate = "1.0.2"
jsonwebkey = "0.3.4"
log = "0.4.17"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-traits = "0.2.15"
openssl = "0.10.40"
reqwest = { version = "0.11.11", features = ["blocking", "json", "stream"], optional = true }
serde = "1.0.132"
serde_json = "1.0.73"
sysinfo = "0.24.5"
thiserror = "1.0"
tokio = { version = "1.19", features = ["full"] }
tokio-stream = { version = "0.1.10", features = ["fs"] }
url = { version = "2.2.2" }
urlencoding = "2.1.0"

[dev-dependencies]
project-root = "0.2.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

# Uncomment to build against local copy of contracts
# [patch."https:github.com/Bundlr-Network/contracts-rust.git"]
# bundlr-contracts-validators = { path = "../contracts/validators" }

[features]
default = ["reqwest-client"]
reqwest-client = ["reqwest", "http"]
test-routes = []

[[bin]]
name = "validator"
path = "src/bin/validator.rs"

[[bin]]
name = "wallet-tool"
path = "src/bin/wallet_tool.rs"

[[bin]]
name = "message-builder"
path = "src/bin/message_builder.rs"

[[bin]]
name = "chain-view"
path = "src/bin/chain_view.rs"

[[bin]]
name = "download-transaction"
path = "src/bin/download_transaction.rs"

[[bin]]
name = "crawl-peers"
path = "src/bin/crawl_peers.rs"

[[bin]]
name = "bundle-tool"
path = "src/bin/bundle_tool.rs"
